--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </form>
                 
             </div>
-            <div class="col-md-7" id="cardsection">
+            <div style="height: 550px; overflow: auto;" class="col-md-7" id="cardsection">
 
             </div>
 
